# rami

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: codex-spec-memory-culprit-actions.md  feature-plan-app-memory-breakdown.md  feature-plan-dropdown-polish.md  feature-plan-gauge-indicator.md  feature-spec-actionable-memory-monitor.md  feature-spec-app-memory-breakdown.md
macos/: Info.plist
scripts/: build-app.sh  generate-icon.swift  release.sh
src/: app.rs  app_control.rs  format.rs  history.rs  lib.rs  lock.rs  login_item.rs  main.rs  memory.rs  model.rs  notification.rs  process_memory.rs  sparkline.rs  status_icon.rs  temperature.rs  tray.rs  trend.rs
tests/: format_tests.rs  lock_tests.rs  memory_tests.rs
