[package]
name = "rami"
version = "0.1.0"
edition = "2021"
description = "Tiny macOS menu bar app that shows current RAM usage as a single SF Symbol gauge."
license = "MIT"
repository = "https://github.com/proxynico/rami"
homepage = "https://github.com/proxynico/rami"
readme = "README.md"
keywords = ["macos", "menu-bar", "memory", "ram", "monitor"]
categories = ["command-line-utilities", "os::macos-apis"]

[lib]
name = "rami"
path = "src/lib.rs"

[[bin]]
name = "rami"
path = "src/main.rs"

[dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "NSApplication",
  "NSAttributedString",
  "NSButton",
  "NSCell",
  "NSColor",
  "NSControl",
  "NSEvent",
  "NSFont",
  "NSFontDescriptor",
  "NSImage",
  "NSMenu",
  "NSMenuItem",
  "NSParagraphStyle",
  "NSResponder",
  "NSRunningApplication",
  "NSStatusBar",
  "NSStatusBarButton",
  "NSStatusItem",
  "NSTextAttachment",
  "NSText",
  "NSView",
  "NSWorkspace",
  "objc2-core-foundation",
] }
objc2-foundation = { version = "0.3", features = [
  "NSError",
  "NSAttributedString",
  "NSObject",
  "NSString",
  "NSTimer",
  "NSUserNotification",
] }
mach2 = "0.4"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
